# chiselstrike

./: .dockerignore  .eslintrc.js  .gitignore  .gitmodules  .mergify.yml  CHANGELOG.md  CLA.md  Cargo.toml  DEVELOPERS.md  Dockerfile  Dockerfile.chiseld  Dockerfile.chiseld-fedora  Dockerfile.test  Dockerfile.test.baseimg  Dockerfile.toolset  README.md  RELEASING.md  TESTS.md  deno.json  integration-tests.sh  package-lock.json  package.json
api/: Cargo.toml  build.rs
api/src/: __chiselstrike.ts  api.ts  builtin_root.ts  chisel.ts  chiselstrike_root.ts  chiselstrike_route_map.ts  crud.ts  datastore.ts  endpoint.ts  event.ts  filter.ts  http.ts  kafka.ts  lib.deno_core.d.ts  lib.rs  main.js  policies.ts  request.ts  routing.ts  run.ts  serve.ts  special.ts  type_system.ts  utils.ts  worker.ts
chiselc/: Cargo.toml  test
chiselc/docs/: indexing.md  query-expr.md
chiselc/scripts/: compare.sh
chiselc/src/: filtering.rs  indexing.rs  lib.rs  main.rs  parse.rs  policies.rs  query.rs  rewrite.rs  symbols.rs  utils.rs
chiselc/src/tools/: control_flow.rs  functions.rs  mod.rs
chiselc/src/tools/analysis/: control_flow.rs  d_ir.rs  mod.rs  region.rs  stmt_map.rs
chiselc/src/transforms/: filter.rs  find.rs  mod.rs  utils.rs
chiselc/src/transforms/filter/: emit.rs  splitting.rs
chiselc/tests/: integration_test.rs  run.rs
chiselc/tests/filters/: filter_properties.rs  filter_splitting.rs  mod.rs  transform_filter.rs
chiselc/tests/lit/: filter-properties-filter.lit  filter-properties-findmany.lit  filter-properties-findone.lit  predicate-indexes.lit  transform-filter-invalid.lit  transform-filter-with-side-effects.lit  transform-filter.lit
chiselc/tests/lit/filter_splitting/: filter-with-side-effects-return.lit  filter-with-side-effects-unoptimizable.lit  filter-with-side-effects.lit  findone.ts
cli/: Cargo.toml  build.rs
cli/docs/: cli-reference.md  conf.py  getting-started.md  index.md  manual.md
cli/examples/: csv.js  csv.ts  endpoint.js  find.js  find.ts  find_by.js  find_by.ts  labels.graphql  person.cst  person.graphql  person.ts  route.ts  store.js  store.ts
cli/src/: chisel.rs  cmd.rs  codegen.rs  events.rs  main.rs  project.rs  routes.rs  server.rs  template  ts.rs  webui.html
cli/src/cmd/: apply.rs  dev.rs  generate.rs
cli/src/cmd/apply/: common.rs  deno.rs  node.rs
cli/src/cmd/generate_src/: client.ts  client_lib.ts  models_without_id.ts  reflection.ts
cli/src/parser/: ast.rs  mod.rs  tokenizer.rs
cli/src/template/: Chisel.toml  chisel-decorators.ts  chisel.d.ts  hello.js  hello.ts  package.json  tsconfig.json
cli/tests/: chiseld_args.rs  integration_tests.rs  linters.rs  npm.rs  test-wrapper.sh
cli/tests/common/: mod.rs
cli/tests/integration_tests/: database.rs  framework.rs  lit.rs  main.rs  rust.rs  suite.rs  test-wrapper.sh
cli/tests/integration_tests/chisel-macros/: Cargo.toml
cli/tests/lit/: access-origin.deno  access-origin.lit  add-remove-add-type.lit  add-type.lit  all-good.deno  api-policy.deno  api-policy.lit  auth-header.node  auth-nested.lit  auth-redirect.lit  auth-store.deno  auth-store.lit  auth-user.lit  bad-filter.deno  bad-filter.lit  bad-url.deno  body-resource.deno  body-resource.lit  build-entity.deno  build-entity.lit  build-without-default.deno  camel.node  chisel-apply-ignores.lit  chisel-init.lit  chiselrequest.deno  concurrency-stream.deno  concurrency.deno  counter.lit  create-entity.lit  create.deno  crud-custom.node  crud.node  csv.deno  csv.lit  cyclic-models.deno  db-api.deno  db-api.lit  defaults.deno  defaults.lit  define-type.lit  (+112 more)
cli/tests/lit/cli/: describe.deno  (+3 more)
datastore/: Cargo.toml  conn.rs  context.rs  ctx.rs  decode_v8.rs  encode_v8.rs  encode_value.rs  entity.rs  layout.rs  lib.rs  sql_writer.rs  util.rs
datastore/migrate/: exec.rs  mod.rs  plan.rs  repr.rs
datastore/ops/: entity.rs  mod.rs  query.rs
datastore/query/: build.rs  eval.rs  exec.rs  mod.rs
datastore/tests/: _datastore.js  _framework.js  _main.rs  _resources.js  _utils.js  entity.js  migrate.js  simple.js
my_tsc/: Cargo.toml
my_tsc/src/: main.rs
server/: Cargo.toml  build.rs
server/docs/: manual.md  protocols.md
server/src/: api.rs  api.ts  apply.rs  auth.rs  auth_callback.js  auth_user.js  authentication.rs  authorization.rs  chisel.js  chisel.ts  collection_utils.rs  db.rs  deno.rs  error.rs  http.rs  internal.rs  introspect.rs  kafka.rs  lib.rs  main.js  main.rs  metrics.rs  module_loader.rs  nursery.rs  opt.rs  outbox.rs  policies.rs  prefix_map.rs  query_stream.rs  rcmut.rs  rpc.rs  runtime.rs  secrets.rs  server.rs  store.rs  trunk.rs  types.rs  vecmap.rs  version.rs  webui.html  (+2 more)
server/src/datastore/: crud.rs  dbconn.rs  engine.rs  expr.rs  filter.rs  mod.rs  query.rs  value.rs
server/src/dts/: lib.deno_core.d.ts
server/src/meta/: schema.rs
server/src/ops/: datastore.rs  env.rs  job.rs  job_context.rs  kafka.rs  mod.rs  request.rs  request_context.rs  type_system.rs
server/src/policy/: debug.rs  engine.rs  instances.rs  interpreter.rs  mod.rs  store.rs  type_policy.rs  utils.rs
server/src/query/: dbconn.rs  engine.rs  expr.rs  mod.rs  store.rs
server/src/types/: builtin.rs  mod.rs  type_system.rs
server/src/worker/: loader.rs  main.js  mod.rs
server/test_files/split_db/: chiseld-old-data.db  chiseld-old-meta.db
server/tests/: test_config_file.rs
snapshot/: Cargo.toml  lib.rs  schema.rs  serde_with.rs
snapshot/typecheck/: mod.rs  recursive.rs
tsc_compile/: Cargo.toml  build.rs
tsc_compile/src/: lib.rs  tsc.js
tsc_compile/tests/: deno_types.ts  deno_types_imp.d.ts  deno_types_imp.js  goldilocks.ts  hello.ts  import-mjs.ts  import_js_a.ts  missing_deno_types.ts  output_imported_a.ts  output_imported_b.ts  synthetic_default.ts  synthetic_default_mod.ts  test1.ts  test2.ts  test3.ts  test4.ts  test5-lib1.d.ts  test5-lib2.d.ts  test5.ts  test6-aux.ts  test6.ts  test7-lib.d.ts  test7.ts  wrong_type.ts  wrong_type_import.ts  zed.d.ts
tsc_compile/tests/deno_types_import/: a.ts  b.d.ts  b.js  c.ts
tsc_compile/tests/relative_a/: bar.ts  foo.ts
utils/: Cargo.toml
utils/src/: lib.rs
(+338 files in other folders)
