[workspace]
resolver = "2"

members = [
    "api",
    "chiselc",
    "cli",
    "dbgarc",
    "deno_std",
    "my_tsc",
    "packages",
    "server",
    "tsc_compile",
    "utils",
]

# This is required to nest workspaces https://github.com/rust-lang/cargo/issues/5042
exclude = ["third_party/deno"]
