[package]
name = "api"
version = "0.14.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[lib]
name = "api"

[dependencies]
lazy_static = "1.4"

[build-dependencies]
anyhow = "1.0"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
tsc_compile = { path = "../tsc_compile" }
