[package]
name = "chiselc"
version = "0.15.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bimap = "0.6.2"
clap = { version = "4.0", features = ["derive"] }
indexmap = "1.8.1"
petgraph = "0.6.2"
quine-mc_cluskey = "0.2.4"
serde = "1.0.137"
serde_json = "1.0.81"
swc_atoms = "0.3.0"
swc_common = "0.25.0"
swc_ecmascript = { version = "0.185.0", features = ["visit", "parser", "transforms", "codegen", "typescript"] }
url = "2.3.1"
vec_map = "0.8.2"

[dev-dependencies]
boa_engine = "0.16.0"
itertools = "0.10.5"
maplit = "1.0.2"
regex = "1.6.0"
