[package]
name = "cli"
version = "0.11.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chisel_server = { package = "server", path = "../server" }
endpoint_tsc = { path = "../endpoint_tsc" }
handlebars = "4.2.2"
nix = "0.22.2"
notify = "5.0.0-pre.12"
once_cell = "1.12.0"
prost = "0.8.0"
regex = "1.5.4"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
structopt = "0.3.23"
swc_common = "0.17.4"
swc_ecmascript = { version = "0.143.0" }
tempfile = "3.2.0"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "net", "fs", "process", "signal"] }
toml = "0.5.8"
tonic = "0.5.2"
utils = { path = "../utils" }

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.5.2"
vergen = { version = "6", default-features = false, features = ["git"] }

[dev-dependencies]
glob = "0.3.0"
itertools = "0.10.3"
lit = { git = "https://github.com/chiselstrike/lit", rev = "607b0b9" }
rayon = "1.5.1"
server = { path = "../server" }
whoami = "1.2.1"

[[bin]]
name = "chisel"
path = "src/main.rs"

[[test]]
name = "integration_tests"
harness = false
