[package]
name = "cli"
version = "0.13.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chisel_server = { package = "server", path = "../server" }
clap = { version = "4.0", features = ["derive"] }
endpoint_tsc = { path = "../endpoint_tsc" }
futures = "0.3.21"
guard = "0.5"
handlebars = "4.2.2"
nix = "0.22.2"
notify = "5.0.0-pre.12"
once_cell = "1.12.0"
prost = "0.8.0"
regex = "1.5.4"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
swc_common = "0.17.4"
swc_ecmascript = { version = "0.143.0" }
tempfile = "3.2.0"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "net", "fs", "process", "signal"] }
toml = "0.5.8"
tonic = "0.5.2"
url = "2.2"
utils = { path = "../utils" }

[build-dependencies]
anyhow = "1.0"
tonic-build = { version = "0.5.2", default-features = false, features = ["prost", "transport"] }
vergen = { version = "6", default-features = false, features = ["git"] }

[dev-dependencies]
bytes = "1.2.0"
chisel-macros = { path = "tests/integration_tests/chisel-macros" }
colored = "2.0.0"
enclose = "1.1"
file-mode = "0.1.2"
fs_extra = "1.2.0"
futures = "0.3"
glob = "0.3.0"
inventory = "0.3.1"
itertools = "0.10.3"
lazy_static = "1.4"
lit = { git = "https://github.com/chiselstrike/lit", rev = "607b0b9" }
num_cpus = "1.13"
port_scanner = "0.1.5"
rand = { version = "0.8.5", features = ["alloc"] }
rayon = "1.5.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rskafka = "0.3.0"
server = { path = "../server" }
strip-ansi-escapes = "0.1.1"
tempdir = "0.3.7"
textwrap = "0.15.0"
time = "0.3.14"
unindent = "0.1.10"
url = "2.2.2"
whoami = "1.2.1"

[[bin]]
name = "chisel"
path = "src/main.rs"

[[test]]
name = "integration_tests"
harness = false
