[package]
name = "chisel-datastore"
version.workspace = true
authors.workspace = true
edition.workspace = true
autotests = false

[lib]
path = "lib.rs"

[[test]]
name = "integration-test"
path = "tests/_main.rs"
harness = false

[dependencies]
anyhow = "1.0"
chisel-snapshot = { path = "../snapshot" }
deno_core = { path = "../third_party/deno/core" }
futures = "0.3"
guard = "0.5"
indexmap = { version = "1.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dependencies.sqlx]
git = "https://github.com/chiselstrike/sqlx.git"
rev = "bcfb6ca404f9070d9a2e187c717fd4bd166fc19f"
features = ["any", "postgres", "sqlite", "runtime-tokio-rustls", "json"]

[dev-dependencies]
tokio = { version = "1.21", features = ["full"] }
