[package]
name = "my_tsc"
version = "0.13.2"
authors = ["ChiselStrike"]
edition = "2021"

[dependencies]
deno_runtime = { path = "../third_party/deno/runtime" }
endpoint_tsc = { path = "../endpoint_tsc" }
structopt = "0.3.23"
tokio = "1.11.0"
url = "2.2"

[[bin]]
name = "my_tsc"
path = "src/main.rs"
