[package]
name = "server"
version = "0.10.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[features]
default = []
must_not_suspend = []

[dependencies]
aes-gcm = "0.9.4"
anyhow = { version = "1.0.45", features = ["backtrace"] }
api = { path = "../api" }
async-channel = "1.6.1"
async-lock = "2.5.0"
base64 = "0.13.0"
deno_core = { path = "../third_party/deno/core" }
deno_runtime = { path = "../third_party/deno/runtime" }
derive-new = "0.5.9"
enclose = "1.1"
enum-as-inner = "0.3.3"
env_logger = "0.9.0"
format-sql-query = "0.4.0"
futures = "0.3.17"
http = "0.2.6"
hyper = { version = "0.14.16", features = ["server", "tcp", "http1"] }
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.14"
nix = "0.22.2"
once_cell = "1.8.0"
openapi = "0.1.5"
pin-project = "1"
prost = "0.8.0"
rand = "0.8.4"
regex = "1"
rsa = "0.5.0"
# pin rustls until they fix this issue (there is a fix but not a release: https://github.com/chiselstrike/chiselstrike/issues/1064)
rustls = "=0.20.2"
sea-query = { version = "0.17.1", features = ["thread-safe"] }
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.68"
sha2 = "0.9.9"
socket2 = { version = "0.3.18", features = ["unix", "reuseport"] }
sqlx = { version = "0.5.12", features = [
    "any",
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
] }
structopt = "0.3.23"
tempfile = "3.2.0"
thiserror = "1.0"
tokio = { version = "1.11.0", features = ["rt", "time"] }
tonic = "0.5.2"
tsc_compile = { path = "../tsc_compile" }
url = "2.2.2"
utils = { path = "../utils" }
uuid = { version = "0.8.2", features = ["v4"] }
yaml-rust = "0.4"

[dev-dependencies]
tempdir = "0.3.7"

[build-dependencies]
# FIXME: We have additional dependencies here to work around
# https://github.com/rust-lang/cargo/issues/6313
anyhow = "1.0"
libc = { version = "0.2.99", features = ["extra_traits", "align"] }
log = { version = "0.4.14", features = ["std"] }
tonic-build = "0.5.2"
tracing = { version = "0.1.30", features = ["log"] }
vergen = { version = "6", default-features = false, features = ["git"] }

[lib]
name = "chisel_server"
path = "src/lib.rs"

[[bin]]
name = "chiseld"
path = "src/main.rs"
