[package]
name = "server"
version = "0.13.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[features]
default = []
must_not_suspend = []

[dependencies]
aes-gcm = "0.9.4"
anyhow = { version = "1.0", features = ["backtrace"] }
api = { path = "../api" }
async-lock = "2.5.0"
base64 = "0.13.0"
boa_engine = "0.16.0"
chiselc = { path = "../chiselc" }
deno_core = { path = "../third_party/deno/core" }
deno_runtime = { path = "../third_party/deno/runtime" }
deno_std = { path = "../deno_std" }
dirs = "4.0.0"
enclose = "1.1"
enum-as-inner = "0.3.3"
env_logger = "0.9.0"
form_urlencoded = "1.0"
format-sql-query = "0.4.0"
futures = "0.3"
guard = "0.5"
http = "0.2.6"
hyper = { version = "0.14.16", features = ["server", "tcp", "http1"] }
itertools = "0.10.1"
jsonwebtoken = "8.1.1"
lazy_static = "1.4"
log = "0.4.14"
nix = "0.22.2"
once_cell = "1.12.0"
parking_lot = "0.12"
paste = "1.0.9"
permutation = "0.4.0"
petgraph = "0.6.2"
pin-project = "1"
prost = "0.8.0"
rand = "0.8.4"
regex = "1"
rsa = "0.7.0-pre"
rskafka = "0.3.0"
rustls = "0.20.6"
sea-query = { version = "0.26", features = ["thread-safe"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.9.13"
sha2 = "0.10.2"
socket2 = { version = "0.3.18", features = ["unix", "reuseport"] }
sqlx = { git = "https://github.com/chiselstrike/sqlx.git", rev = "bcfb6ca404f9070d9a2e187c717fd4bd166fc19f", features = [
    "any",
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
] }
structopt = "0.3.23"
structopt-toml = "0.5.1"
thiserror = "1.0"
tokio = { version = "1.11.0", features = ["net", "rt", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.5.2"
url = "2.2"
utils = { path = "../utils" }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
proptest = "1.0.0"
tempdir = "0.3.7"
tempfile = "3.2.0"

[build-dependencies]
# FIXME: We have additional dependencies here to work around
# https://github.com/rust-lang/cargo/issues/6313
# We don't need backtrace in here, but this avoids a duplicated build.
anyhow = { version = "1.0", features = ["backtrace"] }
libc = { version = "0.2.99", features = ["extra_traits", "align"] }
log = { version = "0.4.14", features = ["std"] }
tonic-build = { version = "0.5.2", default-features = false, features = ["prost", "transport"] }
tracing = { version = "0.1.30", features = ["log"] }
vergen = { version = "6", default-features = false, features = ["git"] }

[lib]
name = "chisel_server"
path = "src/lib.rs"

[[bin]]
name = "chiseld"
path = "src/main.rs"
