[package]
name = "chisel-snapshot"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
indexmap = {version = "1.9", features = ["serde"]}
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
