[package]
name = "tsc_compile"
version = "0.11.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[dependencies]
deno_core = { path = "../third_party/deno/core" }
deno_graph = "0.26.0"
tsc_compile_build = { path = "../tsc_compile_build" }
url = { git = "https://github.com/servo/rust-url.git", rev = "e12d76a61add5bc09980599c738099feaacd1d0d" }
utils = { path = "../utils" }

[dev-dependencies]
console = "0.15.0"
tempfile = "3.2.0"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
deno_core = { path = "../third_party/deno/core" }
tsc_compile_build = { path = "../tsc_compile_build" }

[lib]
name = "tsc_compile"
