[package]
name = "utils"
version = "0.16.0-dev.0"
authors = ["ChiselStrike"]
edition = "2021"

[dependencies]
anyhow = "1.0.56"
async-channel = "1.6.1"
futures-core = "0.3"
nix = "0.22.2"
reqwest = { version = "0.11.13", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.11", features = ["rt"] }

[lib]
