[package]
name = "chisel-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = { version = "1.0.43", features = ["span-locations"] }
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }
walkdir = "2.3.2"

[lib]
proc-macro = true
